Add JDK 17 compatibility branch configuration